real--Added comments regarding issues
index.html:
— submenu not working on tablet
— submenu not displaying properly on Safari
— image title does not align with contact in footer (margin workaround
used)

03_nb_photos.html:
— 1st image in row 1 and 2 do not align top

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,27 +1,28 @@
 #wrapper {
-    width: 100%;
-    max-width: 1024px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 .pagecontainer {
-border: 1px dotted black;
-float: left;
-width: 100%;
-vertical-align: top;
-margin-left: 20px;
-margin-top: 80px;
+  border: 1px dotted black;
+  float: left;
+  width: 100%;
+  height: 568px;
+  vertical-align: top;
+  margin-left: 20px;
+  margin-top: 80px;
 }
 
 
-.pagecontainer2 {
-border: 1px dotted black;
-float: left;
-width: 100%;
-vertical-align: top;
-margin-left: 20px;
-margin-top: 10px;
-display: inline-table;
+footer {
+  border: 1px dotted black;
+  float: left;
+  width: 100%;
+  vertical-align: top;
+  margin-left: 20px;
+  margin-top: 10px;
+  display: inline-table;
 }
 
 #tk-logo {
@@ -37,16 +38,17 @@ display: inline-table;
 }
 
 a {
-	text-decoration: none;
-	color: #000;
+  text-decoration: none;
+  color: #000;
   text-decoration: underline;
 }
 
 a:hover {
-color: #000;
+  color: #000;
 }
 
 a.class2 {
+  font-family: Helvetica, sans-serif;
   text-decoration: none;
   padding: 4px 8px;
   line-height: 32px;
@@ -54,10 +56,10 @@ a.class2 {
 }
 
 a.class2:hover {
-color: #94210C;
-padding: 4px 8px;
-line-height: 32px;
-text-decoration: underline;
+  color: #94210C;
+  padding: 4px 8px;
+  line-height: 32px;
+  text-decoration: underline;
 }
 
 
@@ -74,36 +76,36 @@ a.class3:hover {
 }
 
 a.class4 {
-	font-weight: normal;
-	text-decoration: none;
-	padding: 4px 8px;
-	line-height: 32px;
-	color: #94210C;
+  font-weight: normal;
+  text-decoration: none;
+  padding: 4px 8px;
+  line-height: 32px;
+  color: #94210C;
 }
 
 a.class4:hover {
-	font-weight: normal;
-	color: #666666;
-	padding: 4px 8px;
-	line-height: 32px;
-	text-decoration: underline;
-	}
+  font-weight: normal;
+  color: #666666;
+  padding: 4px 8px;
+  line-height: 32px;
+  text-decoration: underline;
+  }
 
 figure.class1 {
-	display: inline-block;
-    margin: 1em;
-    margin-left: 0;
-    margin-top: 0;
-    /*margin-end: 0px;*/
+  display: inline-block;
+  margin: 1em;
+  margin-left: 0;
+  margin-top: 0;
+  /*margin-end: 0px;*/
 
 }
 
 .header-area {
-	position: relative;
-	margin-left: 20px;
-	margin-top: 10px;
-	/*margin-bottom: 10px;*/
-	display: inline-table;
+  position: relative;
+  margin-left: 20px;
+  margin-top: 10px;
+  /*margin-bottom: 10px;*/
+  display: inline-table;
 }
 
 a.contactstyle {
@@ -138,10 +140,11 @@ a.contactstyle:hover {
   font-style: italic;
   color: #000;
   line-height: 3;
-  margin-left: 600px;
+  margin-left: 750px;
   position: absolute;
-  top: 610px;
+  top: 664px;
 }
+
 
 /*start-nb photo column*/
 .nb-photogrid {
@@ -162,11 +165,11 @@ p.class4 {
 
 /*start-from stackoverflow CK left*/
 ul.leftNav {
-	position: absolute;
-	margin-left: 500px;
-	margin-top: 20px;
-	margin-bottom: 10px;
-	display: inline-table;
+        position: absolute;
+        margin-left: 500px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        display: inline-table;
         padding:0;
         text-align: left;
         font-family: Helvetica, sans-serif;
